force-app/main/default/objects/PE_Logger__c/PE_Logger__c.object-meta.xml
<CustomObject>
    <label>PE Logger</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>PE Logger Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PE Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>