force-app/main/default/objects/PE_Logger__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>PE Loggers</relationshipLabel>
    <relationshipName>PE_Loggers</relationshipName>
    <type>Lookup</type>
</CustomField>