force-app/main/default/objects/PE_Logger__c/fields/CC_Addresses__c.field-meta.xml
<CustomField>
    <fullName>CC_Addresses__c</fullName>
    <description>List of CC addresses to which notification should be sent</description>
    <label>CC Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>