force-app/main/default/objects/PE_Logger__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>ContactId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>