force-app/main/default/objects/PE_Logger__c/fields/Content_Version_Ids__c.field-meta.xml
<CustomField>
    <fullName>Content_Version_Ids__c</fullName>
    <description>This field stores all the IDs of the attachments present on the case.</description>
    <label>Content Version Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>