force-app/main/default/objects/PE_Logger__c/fields/Diff_in_Picked_up_Time__c.field-meta.xml
<CustomField>
    <fullName>Diff_in_Picked_up_Time__c</fullName>
    <formula>(TIMEVALUE(Subscriber_Picked_Up_Time__c ) - TIMEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff in Picked up Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>