force-app/main/default/objects/PE_Logger__c/fields/HTMLBody_Con_Doc_Id__c.field-meta.xml
<CustomField>
    <fullName>HTMLBody_Con_Doc_Id__c</fullName>
    <description>This is used when HTML body to be read from Content Document and send via email.</description>
    <label>HTMLBody Con Doc Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>