force-app/main/default/objects/PE_Logger__c/fields/Is_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Is_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check if an attachment is present or not.</description>
    <label>Is Attachment</label>
    <type>Checkbox</type>
</CustomField>