force-app/main/default/objects/PE_Logger__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used for Prospect Email Communication</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>PE Loggers</relationshipLabel>
    <relationshipName>PE_Loggers</relationshipName>
    <type>Lookup</type>
</CustomField>