force-app/main/default/objects/PE_Logger__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>ABHFL</fullName>
            </value>
            <value>
                <fullName>ABFL</fullName>
            </value>
            <value>
                <fullName>ABWM</fullName>
            </value>
            <value>
                <fullName>ABSLI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>