force-app/main/default/objects/PE_Logger__c/fields/No_Auto_Communication__c.field-meta.xml
<CustomField>
    <fullName>No_Auto_Communication__c</fullName>
    <label>No Auto Communication</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>