force-app/main/default/objects/PE_Logger__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <description>ID of the renewals opportunity for which notification is being sent</description>
    <label>Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>