force-app/main/default/objects/PE_Logger__c/fields/PE_JSON__c.field-meta.xml
<CustomField>
    <fullName>PE_JSON__c</fullName>
    <label>PE JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>