force-app/main/default/objects/PE_Logger__c/fields/PE_Name__c.field-meta.xml
<CustomField>
    <fullName>PE_Name__c</fullName>
    <label>PE Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>