force-app/main/default/objects/PE_Logger__c/fields/Process_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Process_Batch_Size__c</fullName>
    <label>Process Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>