force-app/main/default/objects/PE_Logger__c/fields/Retry_PE__c.field-meta.xml
<CustomField>
    <fullName>Retry_PE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retry PE</label>
    <type>Checkbox</type>
</CustomField>