force-app/main/default/objects/PE_Logger__c/fields/Retry_Time__c.field-meta.xml
<CustomField>
    <fullName>Retry_Time__c</fullName>
    <label>Retry Time</label>
    <type>DateTime</type>
</CustomField>