force-app/main/default/objects/PE_Logger__c/fields/Send_To_Specific_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Specific_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used when Email to be sent to specific email addresses and not to Case Account Contact or related addresses.</description>
    <label>Send To Specific Emails</label>
    <type>Checkbox</type>
</CustomField>