force-app/main/default/objects/PE_Logger__c/fields/Send_To_Specific_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Specific_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send To Specific Mobile</label>
    <type>Checkbox</type>
</CustomField>