force-app/main/default/objects/PE_Logger__c/fields/SMS_Template_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>SMS_Template_Dev_Name__c</fullName>
    <label>SMS Template Dev Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>