force-app/main/default/objects/PE_Logger__c/fields/Specific_Cc_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Specific_Cc_Addresses__c</fullName>
    <label>Specific Cc Addresses</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>