force-app/main/default/objects/PE_Logger__c/fields/Specific_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Specific_To_Address__c</fullName>
    <description>This to be use in combination with Send to Specific Address checkbox.</description>
    <label>Specific To Address</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>