force-app/main/default/objects/PE_Logger__c/fields/Specific_To_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>Specific_To_MobilePhone__c</fullName>
    <label>Specific To MobilePhone</label>
    <type>Phone</type>
</CustomField>