force-app/main/default/objects/PE_Logger__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>