force-app/main/default/objects/PE_Logger__c/fields/Subscriber_Number__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Number__c</fullName>
    <label>Subscriber Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>