force-app/main/default/objects/PE_Logger__c/fields/Subscriber_Picked_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Picked_Up_Time__c</fullName>
    <label>Subscriber Picked Up Time</label>
    <type>DateTime</type>
</CustomField>