force-app/main/default/objects/PE_Logger__c/fields/TakeBodyFromContentDoc__c.field-meta.xml
<CustomField>
    <fullName>TakeBodyFromContentDoc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TakeBodyFromContentDoc</label>
    <type>Checkbox</type>
</CustomField>