force-app/main/default/objects/PE_Logger__c/fields/Time_taken_to_Process_Record__c.field-meta.xml
<CustomField>
    <fullName>Time_taken_to_Process_Record__c</fullName>
    <formula>(TIMEVALUE(LastModifiedDate ) - TIMEVALUE(Subscriber_Picked_Up_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time taken to Process Record</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>