force-app/main/default/objects/PE_Logger__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <label>Unique Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>