force-app/main/default/objects/PE_Logger__c/fields/WhatsApp_Template_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Template_Dev_Name__c</fullName>
    <label>WhatsApp Template Dev Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>